sf-hrms/force-app/main/default/objects/Salary_Structure_Line__c/Salary_Structure_Line__c.object-meta.xml
<CustomObject>
    <label>Salary Structure Line</label>
    <nameField>
        <label>Line No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salary Structure Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>