sf-hrms/force-app/main/default/objects/Salary_Structure_Line__c/fields/Amount_Annual__c.field-meta.xml
<CustomField><fullName>Amount_Annual__c</fullName><label>Amount (Annual)</label><type>Currency</type><precision>18</precision><scale>2</scale></CustomField>