sf-hrms/force-app/main/default/objects/Salary_Structure_Line__c/fields/Amount_Monthly__c.field-meta.xml
<CustomField><fullName>Amount_Monthly__c</fullName><label>Amount (Monthly)</label><type>Currency</type><precision>18</precision><scale>2</scale></CustomField>