sf-hrms/force-app/main/default/objects/Salary_Structure_Line__c/fields/Component__c.field-meta.xml
<CustomField><fullName>Component__c</fullName><label>Component</label><type>Lookup</type><referenceTo>Salary_Component__c</referenceTo><relationshipLabel>Structure Lines</relationshipLabel><relationshipName>Structure_Lines</relationshipName></CustomField>