sf-hrms/force-app/main/default/objects/Salary_Structure_Line__c/fields/Percentage__c.field-meta.xml
<CustomField><fullName>Percentage__c</fullName><label>Percentage</label><type>Percent</type><precision>5</precision><scale>2</scale></CustomField>