sf-hrms/force-app/main/default/objects/Salary_Structure_Line__c/fields/Salary_Structure__c.field-meta.xml
<CustomField><fullName>Salary_Structure__c</fullName><label>Salary Structure</label><type>MasterDetail</type><referenceTo>Salary_Structure__c</referenceTo><relationshipLabel>Lines</relationshipLabel><relationshipName>Lines</relationshipName><writeRequiresMasterRead>false</writeRequiresMasterRead><reparentableMasterDetail>false</reparentableMasterDetail></CustomField>