sf-hrms/force-app/main/default/objects/Salary_Structure_Line__c/validationRules/Amount_Non_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_Non_Negative</fullName>
    <active>true</active>
    <errorConditionFormula>Amount_Monthly__c &lt; 0</errorConditionFormula>
    <errorMessage>Monthly amount cannot be negative.</errorMessage>
</ValidationRule>